--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,7 +42,7 @@
         <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <a class="catalog__image" href="#">
+            <a class="catalog__image" href="product.html">
               <picture>
               <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
@@ -69,10 +69,10 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="product.html">Заказать</a>
+            <a class="button catalog__button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__image" href="#">
+            <a class="catalog__image" href="product.html">
               <picture>
                 <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
@@ -99,10 +99,10 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="product.html">Заказать</a>
+            <a class="button catalog__button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__image" href="#">
+            <a class="catalog__image" href="product.html">
               <picture>
                 <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
@@ -129,10 +129,10 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="product.html">Заказать</a>
+            <a class="button catalog__button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__image" href="#">
+            <a class="catalog__image" href="product.html">
               <picture>
                 <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
@@ -159,10 +159,10 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="product.html">Заказать</a>
+            <a class="button catalog__button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__image" href="#">
+            <a class="catalog__image" href="product.html">
               <picture>
               <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
@@ -189,10 +189,10 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="product.html">Заказать</a>
+            <a class="button catalog__button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__image" href="#">
+            <a class="catalog__image" href="product.html">
               <picture>
                 <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
@@ -219,10 +219,10 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="product.html">Заказать</a>
+            <a class="button catalog__button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <a class="catalog__image" href="#">
+            <a class="catalog__image" href="product.html">
               <picture>
                 <source type="image/webp" media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
@@ -249,10 +249,10 @@
                 </tr>
               </table>
             </div>
-            <a class="button catalog__button" href="product.html">Заказать</a>
+            <a class="button catalog__button" href="order.html">Заказать</a>
           </li>
           <li class="catalog__item">
-            <h2 class="catalog__product"><a href="#">Показать еще 100500 товаров</a></h2>
+            <h2 class="catalog__product"><a href="more.html">Показать еще 100500 товаров</a></h2>
             <p class="catalog__cell">На самом деле вкусов гораздо больше!</p>
             <a class="button button--grey catalog__button" href="more.html">Показать все</a>
           </li>
@@ -263,28 +263,28 @@
         <div class="additional__wrapper">
           <ul class="additional__list">
             <li class="additional__item">
-              <h2 class="additional__product"><a href="#">Сахарозаменитель</a></h2>
+              <h2 class="additional__product"><a href="product.html">Сахарозаменитель</a></h2>
               <span class="additional__text">1 упаковка (100 г)</span>
               <span class="additional__text">100 Р.</span>
-              <a class="button additional__button" href="#">Заказать</a>
+              <a class="button additional__button" href="order.html">Заказать</a>
             </li>
             <li class="additional__item">
-              <h2 class="additional__product"><a href="#">Питьевая вода</a></h2>
+              <h2 class="additional__product"><a href="product.html">Питьевая вода</a></h2>
               <span class="additional__text">5 литров</span>
               <span class="additional__text">50 Р.</span>
-              <a class="button additional__button" href="#">Заказать</a>
+              <a class="button additional__button" href="order.html">Заказать</a>
             </li>
             <li class="additional__item">
-              <h2 class="additional__product"><a href="#">Молоко</a></h2>
+              <h2 class="additional__product"><a href="product.html">Молоко</a></h2>
               <span class="additional__text">1 литр</span>
               <span class="additional__text">100 Р.</span>
-              <a class="button additional__button" href="#">Заказать</a>
+              <a class="button additional__button" href="order.html">Заказать</a>
             </li>
             <li class="additional__item">
-              <h2 class="additional__product"><a href="#">Витамины</a></h2>
+              <h2 class="additional__product"><a href="product.html">Витамины</a></h2>
               <span class="additional__text">1 упаковка (30 г)</span>
               <span class="additional__text">300 Р.</span>
-              <a class="button additional__button" href="#">Заказать</a>
+              <a class="button additional__button" href="order.html">Заказать</a>
             </li>
           </ul>
           <div class="additional__bonus">
