--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
             </li>
             <li class="programs__item">
               <h3 class="programs__title programs__title--pro">Набор массы</h3>
-              <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые<br> мышцы!</p>
+              <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые <span>мышцы!</span></p>
               <a class="programs__link" href="catalog.html">Каталог pro</a>
             </li>
           </ul>
