--- a/source/form.html
+++ b/source/form.html
@@ -79,7 +79,7 @@
               </label>
             </li>
           </ul>
-          <h2 class="form__title title title--stripe">Контактные данные<span> (владельца кота)</span></h2>
+          <h2 class="form__title title title--stripe title--stripe-up">Контактные данные<span> (владельца кота)</span></h2>
           <div class="form__wrapper form__wrapper--owner-data">
             <label class="form__label">E-mail:*
               <input class="form__input form__input--mail" type="email" name="email" placeholder="kuklachev@gmail.com">
