--- a/source/index.html
+++ b/source/index.html
@@ -121,7 +121,7 @@
           <div class="slider__control">
             <label class="slider__text" for="slider-before" aria-label="Фото до">Было</label>
             <div class="slider__toggler">
-              <span class="slider__button slider__button--before"></span>
+              <button class="slider__button slider__button--before"></button>
             </div>
             <label class="slider__text" for="slider-after" aria-label="Фото после">Стало</label>
           </div>
