--- a/source/index.html
+++ b/source/index.html
@@ -25,17 +25,17 @@
             </a>
             <button class="navigation__toggle" type="button"></button>
           </div>
-            <ul class="navigation__list navigation__list--white">
-              <li class="navigation__item">
-                <a class="navigation__link">Главная</a>
-              </li>
-              <li class="navigation__item">
-                <a class="navigation__link" href="catalog.html">Каталог продукции</a>
-              </li>
-              <li class="navigation__item">
-                <a class="navigation__link" href="form.html">Подбор программы</a>
-              </li>
-            </ul>
+          <ul class="navigation__list navigation__list--white">
+            <li class="navigation__item">
+              <a class="navigation__link">Главная</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
         </nav>
         <section class="basic wrapper">
           <h1 class="title basic__title">Функциональное питание для котов</h1>
@@ -60,12 +60,12 @@
             <li class="programs__item">
               <h3 class="programs__title programs__title--slim">Похудение</h3>
               <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="programs__link" href="catalog.html">Каталог Slim</a>
+              <a class="programs__link" href="catalog-slim.html">Каталог Slim</a>
             </li>
             <li class="programs__item">
               <h3 class="programs__title programs__title--pro">Набор массы</h3>
               <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые <span>мышцы!</span></p>
-              <a class="programs__link" href="catalog.html">Каталог pro</a>
+              <a class="programs__link" href="catalog-pro.html">Каталог pro</a>
             </li>
           </ul>
         </section>
@@ -121,7 +121,7 @@
           <div class="slider__control">
             <label class="slider__text" for="slider-before" aria-label="Фото до">Было</label>
             <div class="slider__toggler">
-              <button class="slider__button slider__button--before"></button>
+              <div class="slider__button slider__button--before"></div>
             </div>
             <label class="slider__text" for="slider-after" aria-label="Фото после">Стало</label>
           </div>
