--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body class ="no-js">
     <div style="display: none">
       <include src="build/img/sprite.svg"></include>
     </div>
