--- a/source/form.html
+++ b/source/form.html
@@ -19,7 +19,7 @@
             <picture>
               <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-              <img class="navigation__icon" src="img/logo-mobile.svg"  alt="Логотип Cat Energy">
+              <img class="navigation__icon" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
             </picture>
           </a>
           <button class="navigation__toggle" type="button"></button>
@@ -61,19 +61,19 @@
           </ul>
           <ul class="form__list form__list--program wrapper">
             <li class="form__item">
-              <label class="form__label">
+              <label class="form__label form__label--radio">
                 <input class="visually-hidden" type="radio" name="program" value="slim" checked>
                 <span class="form__radio">Похудение</span>
               </label>
             </li>
             <li class="form__item">
-              <label class="form__label">
+              <label class="form__label form__label--radio">
                 <input class="visually-hidden" type="radio" name="program" value="pro">
                 <span class="form__radio">Набор массы</span>
               </label>
             </li>
             <li class="form__item">
-              <label class="form__label">
+              <label class="form__label form__label--radio">
                 <input class="visually-hidden" type="radio" name="program" value="unknown">
                 <span class="form__radio">Не знаю (нужен ваш совет)</span>
               </label>
@@ -104,25 +104,25 @@
           <div class="form__check-list">
             <ul class="form__list form__list--checkbox">
               <li class="form__item">
-                <label class="form__label">
+                <label class="form__label form__label--checkbox">
                   <input class="visually-hidden" type="checkbox" name="sweetener" checked>
                   <span class="form__checkbox">Сахарозаменитель</span>
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__label">
+                <label class="form__label form__label--checkbox">
                   <input class="visually-hidden" type="checkbox" name="water">
                   <span class="form__checkbox">Питьевая вода</span>
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__label">
+                <label class="form__label form__label--checkbox">
                   <input class="visually-hidden" type="checkbox" name="milk">
                   <span class="form__checkbox">Молоко</span>
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__label">
+                <label class="form__label form__label--checkbox">
                   <input class="visually-hidden" type="checkbox" name="vitamins">
                   <span class="form__checkbox">Витамины</span>
                 </label>
