--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
                 <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-                <img class="navigation__icon" src="img/logo-mobile.svg"  alt="Логотип Cat Energy">
+                <img class="navigation__icon" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
               </picture>
             </a>
             <button class="navigation__toggle" type="button"></button>
